--- a/package.json
+++ b/package.json
@@ -1,40 +1,47 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
-	"type": "module",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json",
-		"lint": "eslint .",
-		"test": "echo test",
-		"prepare": "husky"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"@commitlint/cli": "^19.5.0",
-		"@commitlint/config-conventional": "^19.5.0",
-		"@eslint/js": "^9.12.0",
-		"@types/eslint__js": "^8.42.3",
-		"@types/node": "^22.7.5",
-		"@typescript-eslint/eslint-plugin": "8.0.0",
-		"@typescript-eslint/parser": "8.0.0",
-		"builtin-modules": "4.0.0",
-		"esbuild": "0.17.3",
-		"eslint": "^9.12.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-prettier": "^5.2.1",
-		"globals": "^15.11.0",
-		"husky": "^9.1.6",
-		"lint-staged": "^15.2.10",
-		"obsidian": "latest",
-		"prettier": "^3.3.3",
-		"tslib": "2.7.0",
-		"typescript": "5.6.3",
-		"typescript-eslint": "^8.8.1"
-	}
+  "name": "obsidian-sample-plugin",
+  "version": "1.0.0",
+  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "main": "main.js",
+  "scripts": {
+    "dev": "vite build --watch",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "node version-bump.mjs && git add manifest.json versions.json",
+    "lint": "eslint .",
+    "test": "vitest",
+    "prepare": "husky"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@eslint/js": "^9.12.0",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
+    "@tsconfig/svelte": "^5.0.4",
+    "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.7.5",
+    "@typescript-eslint/eslint-plugin": "8.0.0",
+    "@typescript-eslint/parser": "8.0.0",
+    "builtin-modules": "4.0.0",
+    "esbuild": "0.17.3",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.11.0",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "obsidian": "latest",
+    "prettier": "^3.3.3",
+    "svelte": "5.0.0-next.264",
+    "tslib": "2.7.0",
+    "typescript": "5.6.3",
+    "typescript-eslint": "^8.8.1",
+    "vite": "6.0.0-beta.2",
+    "vitest": "^2.1.3"
+  },
+  "dependencies": {
+    "memfs": "^4.14.0"
+  }
 }
