--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "obsidian-sample-plugin",
+  "name": "obsidian-move-file-plugin",
   "version": "1.0.0",
-  "description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+  "description": "A plugin for Obsidian that allows you to move file and relative links will be updated automatically.",
   "main": "main.js",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "build": "vite build",
     "version": "node version-bump.mjs && git add manifest.json versions.json",
     "lint": "eslint .",
     "test": "vitest",
@@ -42,6 +42,8 @@
     "vitest": "^2.1.3"
   },
   "dependencies": {
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
     "memfs": "^4.14.0"
   }
 }
