--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "move-files",
-  "name": "move files",
-  "version": "0.0.1",
-  "minAppVersion": "0.15.0",
-  "description": "move file and relative links will be updated automatically",
-  "author": "xjiaxiang_86@163.com",
-  "authorUrl": "https://obsidian.md",
-  "isDesktopOnly": true
+	"id": "batch-move-files",
+	"name": "Batch Move Files",
+	"version": "0.0.1",
+	"minAppVersion": "0.15.0",
+	"description": "move file and relative links file to a new location",
+	"author": "xjiaxiang_86@163.com",
+	"authorUrl": "https://github.com/SaiRS",
+	"isDesktopOnly": true
 }
