--- a/package.json
+++ b/package.json
@@ -1,49 +1,32 @@
 {
-  "name": "obsidian-move-file-plugin",
-  "version": "1.0.0",
-  "description": "A plugin for Obsidian that allows you to move file and relative links will be updated automatically.",
-  "main": "main.js",
-  "scripts": {
-    "dev": "vite build --watch",
-    "build": "vite build",
-    "version": "node version-bump.mjs && git add manifest.json versions.json",
-    "lint": "eslint .",
-    "test": "vitest",
-    "prepare": "husky"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@commitlint/cli": "^19.5.0",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@eslint/js": "^9.12.0",
-    "@sveltejs/vite-plugin-svelte": "4.0.0-next.8",
-    "@tsconfig/svelte": "^5.0.4",
-    "@types/eslint__js": "^8.42.3",
-    "@types/node": "^22.7.5",
-    "@typescript-eslint/eslint-plugin": "8.0.0",
-    "@typescript-eslint/parser": "8.0.0",
-    "builtin-modules": "4.0.0",
-    "esbuild": "0.17.3",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.11.0",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10",
-    "obsidian": "latest",
-    "prettier": "^3.3.3",
-    "svelte": "5.0.0-next.264",
-    "tslib": "2.7.0",
-    "typescript": "5.6.3",
-    "typescript-eslint": "^8.8.1",
-    "vite": "6.0.0-beta.2",
-    "vitest": "^2.1.3"
-  },
-  "dependencies": {
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.31.0",
-    "memfs": "^4.14.0"
-  }
+	"name": "obsidian-move-file-plugin",
+	"version": "1.0.0",
+	"description": "A plugin for Obsidian that allows you to move file and relative links will be updated automatically.",
+	"main": "main.js",
+	"scripts": {
+		"dev": "vite build --watch",
+		"build": "vite build && cp manifest.json dist/",
+		"version": "node version-bump.mjs && git add manifest.json versions.json",
+		"lint": "eslint .",
+		"test": "vitest",
+		"prepare": "husky"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@commitlint/cli": "^19.5.0",
+		"@commitlint/config-conventional": "^19.5.0",
+		"@types/node": "^22.7.5",
+		"builtin-modules": "4.0.0",
+		"husky": "^9.1.6",
+		"lint-staged": "^15.2.10",
+		"memfs": "^4.14.0",
+		"obsidian": "latest",
+		"tslib": "^2.8.1",
+		"typescript": "5.6.3",
+		"vite": "6.0.2",
+		"vitest": "^2.1.3"
+	}
 }
