--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,22 @@
 {
-  "extends": "@tsconfig/svelte/tsconfig.json",
-  "compilerOptions": {
-    "baseUrl": ".",
-    "types": ["svelte", "node"],
-    "inlineSources": true,
-    "module": "ESNext",
-    "target": "ES6",
-    "allowJs": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "importHelpers": true,
-    "isolatedModules": true,
-    "strictNullChecks": true,
-    "lib": ["DOM", "ES5", "ES6", "ES7"]
-  },
-  "include": ["**/*.ts", "vite.config.mts", "__mocks__/fs.ts", "__mocks__/fs/promises.ts"]
+	"compilerOptions": {
+		"baseUrl": ".",
+		"types": ["node"],
+		"module": "ESNext",
+		"target": "ES6",
+		"allowJs": true,
+		"noImplicitAny": true,
+		"moduleResolution": "node",
+		"importHelpers": true,
+		"isolatedModules": true,
+		"strictNullChecks": true,
+		"lib": ["DOM", "ES5", "ES6", "ES7"],
+		"allowSyntheticDefaultImports": true
+	},
+	"include": [
+		"**/*.ts",
+		"vite.config.mts",
+		"__mocks__/fs.ts",
+		"__mocks__/fs/promises.ts"
+	]
 }
