--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -41,6 +41,11 @@ jobs:
     needs: build
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+
       - name: Checkout code
         uses: actions/checkout@v3
 
