--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"lint-staged": "^15.2.10",
 		"memfs": "^4.14.0",
 		"obsidian": "latest",
+		"release-it": "^17.11.0",
 		"tslib": "^2.8.1",
 		"typescript": "5.6.3",
 		"vite": "6.0.2",
