--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"memfs": "^4.14.0",
 		"obsidian": "latest",
 		"release-it": "^17.11.0",
+		"standard-version": "^9.5.0",
 		"tslib": "^2.8.1",
 		"typescript": "5.6.3",
 		"vite": "6.0.2",
