--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -44,6 +44,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
