build: add release-it config file

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.5",
 	"description": "A plugin for Obsidian that allows you to move file and relative links will be move automatically.",
 	"main": "main.js",
+	"type": "module",
 	"scripts": {
 		"dev": "vite build --watch",
 		"build": "vite build && cp manifest.json dist/",
