--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
           node-version: 22 # 指定 Node.js 版本
 
@@ -28,8 +28,7 @@ jobs:
         run: npm run build # 确保你的项目中定义了一个 "build" 脚本
 
       - name: Archive the build
-        # dist rename to batch-move-files
-        run: mv dist batch-move-files && zip -r build.zip ./batch-move-files # 将构建输出打包为 ZIP 文件
+        run: zip -r build.zip ./dist # 将构建输出打包为 ZIP 文件
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -43,10 +42,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Download artifact
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v3
         with:
           name: build-artifact
 
