--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"dev": "vite build --watch",
 		"build": "vite build && cp manifest.json dist/",
+		"changelog": "pnpm release-it --ci --no-git.push",
 		"version": "node version-bump.mjs && git add manifest.json versions.json",
 		"lint": "eslint .",
 		"test": "vitest",
@@ -26,7 +27,6 @@
 		"memfs": "^4.14.0",
 		"obsidian": "latest",
 		"release-it": "^17.11.0",
-		"standard-version": "^9.5.0",
 		"tslib": "^2.8.1",
 		"typescript": "5.6.3",
 		"vite": "6.0.2",
