--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
 	"version": "0.0.6",
 	"description": "A plugin for Obsidian that allows you to move file and relative links will be move automatically.",
 	"main": "main.js",
-	"type": "module",
 	"scripts": {
 		"dev": "vite build --watch",
 		"build": "vite build && cp manifest.json dist/",
@@ -31,5 +30,6 @@
 		"typescript": "5.6.3",
 		"vite": "6.0.2",
 		"vitest": "^2.1.3"
-	}
+	},
+	"dependencies": {}
 }
