--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
 		"isolatedModules": true,
 		"strictNullChecks": true,
 		"lib": ["DOM", "ES5", "ES6", "ES7"],
-		"allowSyntheticDefaultImports": true
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true
 	},
 	"include": [
 		"**/*.ts",
