chore: add if to workflow step to skip some unused step

--- a/.github/workflows/release-please.yaml
+++ b/.github/workflows/release-please.yaml
@@ -25,24 +25,25 @@ jobs:
           release-type: node
 
       - name: Checkout code
+        if: ${{ steps.release.outputs.release_created }}
         uses: actions/checkout@v4
 
       - name: Set up Node.js
+        if: ${{ steps.release.outputs.release_created }}
         uses: actions/setup-node@v4
         with:
           node-version: 22 # 指定 Node.js 版本
 
       - name: Install pnpm
+        if: ${{ steps.release.outputs.release_created }}
         run: npm install -g pnpm # 安装 pnpm
 
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Build the project
-        run: pnpm run build
-
-      - name: Archive build artifact
-        run: mv dist batch-move-files && zip -r build.zip ./batch-move-files
+      - name: Install dependencies and build
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          pnpm install --frozen-lockfile
+          pnpm run build
+          mv dist batch-move-files && zip -r build.zip ./batch-move-files
 
       - name: Upload Release Artifact
         if: ${{ steps.release.outputs.release_created }}
